--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,6 +18,7 @@
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/EquationParserSpec.js"></script>
+  <script src="spec/EquationSolverSpec.js"></script>
 
 </head>
 
